src/objects/Product__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Base_Upgrade__c</fullName>
        <description>Indicates if base or upgrade product on section.</description>
        <label>Base/Upgrade</label>
        <picklist>
            <picklistValues>
                <fullName>Base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_closed__c</fullName>
        <label>Date closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee_Excess_Code__c</fullName>
        <description>Indicates excess on product.</description>
        <label>Employee Excess Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Excess_Description__c</fullName>
        <description>Indicates excess on product</description>
        <label>Employee Excess Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Employer_Excess_Code__c</fullName>
        <description>Indicates excess on product</description>
        <label>Employer Excess Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Excess_Description__c</fullName>
        <description>Indicates excess on product</description>
        <label>Employer Excess Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Long_Description__c</fullName>
        <label>Long Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Hospital Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extra</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Requested Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Requested Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>